# jfrv

./: .eslintrc.js  .gitmodules  0c02ed993cb79ed0.module.wasm  1c5c5691294ab30e.module.wasm  271d580fd0395f22.module.wasm  29b0d3a062176cde.module.wasm  30c32b00f1b747a3.module.wasm  30c4893c0a7b9c79.js  3c02f44e977e01d0.module.wasm  40862071d30fe427.module.wasm  551d3647a07f78c3.module.wasm  5aa0723a93c27e7e.js  8aaca581295e28c5.module.wasm  README.md  a04aedc4267c841a.module.wasm  aeef8719529031f7.module.wasm  b055040ab162f603.module.wasm  d0575178b9959b7c.module.wasm  demo.jfr  f81ae1ff75d90762.js  f8451f609354229e.module.wasm  fe5c754eee512076.module.wasm  index.html  package.json  publish-pages.sh  tailwind.config.js  tsconfig.json  vue.config.js
css/: app.10f4339e.css  app.185d9f47.css  app.21aa7ece.css  app.6b777fe5.css  app.86dd3c53.css  app.91111a12.css  app.9824df8e.css  app.a83f6fbb.css  app.d96ae0ee.css  chunk-vendors.56443652.css
jfr-converter/: build.gradle  settings.gradle
jfr-converter/src/main/java/com/mayreh/pete2/: Converter.java
jfrv-wasm/: Cargo.toml
jfrv-wasm/src/: lib.rs  profile.rs  web.rs
jfrv-wasm/src/execution_sample/: mod.rs  render.rs
jfrv-wasm/src/flame_graph/: mod.rs  render.rs
jfrv-wasm/src/jbm/: mod.rs  render.rs
jfrv-wasm/test-data/: profiler-multichunk.jfr
js/: 672.1b139696.js  672.1b139696.js.map  672.3665278b.js  672.3665278b.js.map  672.6089d81e.js  672.6089d81e.js.map  672.618f2081.js  672.618f2081.js.map  672.61d1bccd.js  672.61d1bccd.js.map  672.62780bb3.js  672.62780bb3.js.map  672.6911a79a.js  672.6911a79a.js.map  672.8cca87a0.js  672.8cca87a0.js.map  672.90f2b4da.js  672.90f2b4da.js.map  672.96876952.js  672.96876952.js.map  672.baec2185.js  672.baec2185.js.map  672.c02f265b.js  672.c02f265b.js.map  672.d24cd7fd.js  672.d24cd7fd.js.map  672.d3f7f57f.js  672.d3f7f57f.js.map  672.e63c355c.js  672.e63c355c.js.map  672.f483fe80.js  672.f632533f.js  672.f632533f.js.map  672.fafc49ea.js  672.fafc49ea.js.map  app.0cbbf209.js  app.0cbbf209.js.map  app.1a056eb4.js  app.1a056eb4.js.map  app.30ae54c2.js  (+45 more)
pete2-wasm/: .gitignore  Cargo.toml
pete2-wasm/src/: execution.rs  lib.rs  profile.rs  web.rs
pete2-wasm/src/execution_sample/: mod.rs  render.rs
public/: index.html
public/flame_graph/: index.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/jfr/: mod.rs
src/components/: HelloWorld.vue  JfrDataGridElement.ts  TabView.vue  TreeNode.vue
src/models/jfr/: profile.ts
src/router/: index.ts
src/utils/: array.ts
src/views/: ExecutionSample.vue  FlameGraph.vue  HomeView.vue  JFRView.vue  JfrQuery.vue  JvmBlockingMonitor.vue  duckdb.ts  flame-graph.ts
