[package]
name = "jfrv-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jfrs = "0.1.3"
anyhow = "1.0.65"
rustc-hash = "1.1.0"
serde = { version = "1.0.144", features = ["derive"] }
console_log = "0.2"
log = "0.4"
regex = "1.6.0"
chrono = "0.4.22"
flate2 = "1.0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.59", features = [
    "Document",
    "MouseEvent",
    "HtmlCollection",
    "HtmlElement",
    "HtmlCanvasElement",
    "SvgUseElement",
    "SvgRect",
    "Text",
    "Window",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration"] }
js-sys = "0.3.61"
tsify = "0.4.0"
num-format = "0.4.4"
