[package]
name = "pete2-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jfrs = { path = "/Users/hokada/develop/src/github.com/ocadaruma/jfrs" }
three-d = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
console_log = "0.2"
web-sys = { version = "0.3.59", features = ["Document", "HtmlCollection", "HtmlCanvasElement", "Window"] }
serde = { version = "1.0.144", features = ["derive"] }
tsify = "0.4.0"
